--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Read Later</string>
     <string name="colorpicker_chosen_label">Выбрать цвет</string>
     <string name="colorpicker_favorites_label">Сохраненные цвета</string>
@@ -38,8 +38,8 @@
     <string name="mainlist_drawer_date_creation">По дате создания</string>
     <string name="mainlist_drawer_date_modified">По дате изменения</string>
     <string name="mainlist_drawer_date_viewed">По дате просмотра</string>
-    <string name="mainlist_drawer_datefrom_hint"><font size="12">от</font></string>
-    <string name="mainlist_drawer_dateto_hint"><font size="12">до</font></string>
+    <string name="mainlist_drawer_datefrom_hint"><font size="12" tools:ignore="UnusedResources">от</font></string>
+    <string name="mainlist_drawer_dateto_hint"><font size="12" tools:ignore="UnusedResources">до</font></string>
     <string name="mainlist_drawer_debug_title">Специальные возможности</string>
     <string name="mainlist_drawer_deleteall_title">Очистить БД</string>
     <string name="mainlist_drawer_fillplaceholders_title">Заполнить БД</string>
